fixed date digits and realigned calendar data

--- a/weather/src/App.css
+++ b/weather/src/App.css
@@ -1,7 +1,3 @@
-/* body {
-  display: flex;
-  justify-content: center;
-} */
 .App {
   display: flex;
   flex-direction: column;
@@ -25,11 +21,6 @@
   text-align: center;
 }
 
-/* #content {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(7rem, 1fr));
-} */
-
 #content {
   justify-self: center;
   display: flex;
@@ -42,35 +33,7 @@
 @media (max-width: 41rem) {
   #content {
     display: flex;
-    /* flex-wrap: wrap; */
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    /* width: 100%; */
   }
 }
-
-/* @media (max-width: 41rem) {
-  #content {
-    display: grid;
-    grid-template: auto 1fr / none;
-    justify-content: center;
-  }
-
-  .calendar:last-child {
-    grid-column: 1/3;
-  }
-} */
-
-/* #content {
-  display: grid;
-  grid-template: none / auto 1fr;
-}
-
-@media (max-width: 55em) {
-  #content {
-    display: grid;
-    grid-template: auto 1fr / none;
-    justify-content: center;
-  }
-} */
